<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:parentActivityName=".MainFragment"
    tools:context="com.example.santiago.project.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/pr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textAlignment="center" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radioGoupp1">


                <RadioButton
                    android:text="@string/r1p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton4"
                    android:layout_weight="1"
                    android:checked="false" />

                <RadioButton
                    android:text="@string/r2p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton3"
                    android:layout_weight="1"/>

                <RadioButton
                    android:text="@string/r3p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton2"
                    android:layout_weight="1"/>

                <RadioButton
                    android:text="@string/r4p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton"
                    android:layout_weight="1"/>
            </RadioGroup>

            <TextView
                android:text="@string/p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textAlignment="center" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radioGoupp2">

                <RadioButton
                    android:text="@string/r1p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton8"
                    android:layout_weight="1"/>

                <RadioButton
                    android:text="@string/r2p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton7"
                    android:layout_weight="1"/>

                <RadioButton
                    android:text="@string/r3p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton6"
                    android:layout_weight="1"/>

                <RadioButton
                    android:text="@string/r4p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton5"
                    android:layout_weight="1"/>
            </RadioGroup>

            <TextView
                android:text="@string/p3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textAlignment="center" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radioGoupp3">



                <RadioButton
                    android:text="@string/r1p3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton12"
                    android:layout_weight="1"/>

                <RadioButton
                    android:text="@string/r2p3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton11"
                    android:layout_weight="1"/>

                <RadioButton
                    android:text="@string/r3p3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton10"
                    android:layout_weight="1"/>

                <RadioButton
                    android:text="@string/r4p3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton9"
                    android:layout_weight="1"/>
            </RadioGroup>

            <TextView
                android:text="@string/p4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:textAlignment="center" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radioGoupp4">

                <RadioButton
                    android:text="@string/r1p4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton16"
                    android:layout_weight="1"/>

                <RadioButton
                    android:text="@string/r2p4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton15"
                    android:layout_weight="1"/>

                <RadioButton
                    android:text="@string/r3p4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton14"
                    android:layout_weight="1"/>

                <RadioButton
                    android:text="@string/r4p4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton13"
                    android:layout_weight="1"/>
            </RadioGroup>

            <Button
                android:text="Continuar"
                android:textColor="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button1"
                android:textSize="20sp"
                android:background="@color/colorPrimaryDark"
                style="@style/Widget.AppCompat.ActionButton.Overflow" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
